# ppois

./: CMakeLists.txt  CantorovoSet.cpp  CantorovoSet.h  Menu.cpp  coverage.info  coverage.info.cleaned  main  main.cpp  runTests  tests  tests-CantorovoSet.gcda  tests-CantorovoSet.gcno  tests-tests.gcda  tests-tests.gcno  tests.cpp
coverage_report/: cmd_line
coverage_report/ppois/: CantorovoSet.cpp.func-c.html  CantorovoSet.cpp.gcov.html  index-sort-f.html  index.html  tests.cpp.func-c.html  tests.cpp.func.html
lab1/task1/: CMakeLists.txt  CantorovoSet.cpp  Doxyfile  InputCheck.cpp  InputCheck.h  InputChecker.cpp  InputChecker.h  coverage.info  coverage.info.cleaned  main
lab1/task1/coverage_report/: index-sort-f.html  index-sort-l.html  index.html
lab1/task1/coverage_report/ppois/: CantorovoSet.cpp.func.html  index-sort-l.html  tests.cpp.gcov.html
lab1/task1/docs/: CantorovoSet_8h_source.html  InputCheck_8h_source.html  Menu_8h_source.html  annotated.html  classBarEnvironment-members.html  classBarEnvironment.html  classBarEnvironment__coll__graph.md5  classBarEnvironment__inherit__graph.map  classBase-members.html  classBase.html  classBase__inherit__graph.map  classBase__inherit__graph.md5  classBiggestIntConvertible-members.html  classBiggestIntConvertible.html  classCantorovoSet-members.html  classCantorovoSet.html  classChildClassWithStreamOperator.html  classChildClassWithStreamOperator__coll__graph.map  classChildClassWithStreamOperator__inherit__graph.md5  classChildClassWithoutStreamOperator.html  classChildClassWithoutStreamOperator__coll__graph.map  classChildClassWithoutStreamOperator__inherit__graph.md5  classCommentTest.html  classCommentTest__coll__graph.map  classCommentTest__inherit__graph.md5  classCommonTest-members.html  classCommonTest.html  classCommonTest__coll__graph.map  classCommonTest__coll__graph.md5  classCommonTest__inherit__graph.map  classCommonTest__inherit__graph.md5  classConstructFromT-members.html  classConstructFromT.html  classContainerTest-members.html  classContainerTest.html  classConversionHelperBase.html  classConversionHelperBase__inherit__graph.map  classConversionHelperBase__inherit__graph.md5  classConversionHelperDerived.html  classConversionHelperDerived__inherit__graph.map  (+1811 more)
lab1/task1/docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  (+27 more)
lab1/task1/latex/: CantorovoSet_8h_source.tex  InputCheck_8h_source.tex  Menu_8h_source.tex  annotated.tex  classBarEnvironment.tex  classBarEnvironment__inherit__graph.md5  classBase.tex  classBase__inherit__graph.md5  classBiggestIntConvertible.tex  classCantorovoSet.tex  classChildClassWithStreamOperator.tex  classChildClassWithStreamOperator__coll__graph.md5  classChildClassWithoutStreamOperator.tex  classChildClassWithoutStreamOperator__coll__graph.md5  classCommentTest.tex  classCommentTest__coll__graph.md5  classCommonTest.tex  classCommonTest__coll__graph.md5  classCommonTest__inherit__graph.md5  classConstructFromT.tex  classContainerTest.tex  classContainerTest__inherit__graph.md5  classConversionHelperBase.tex  classConversionHelperBase__inherit__graph.md5  classConversionHelperDerived.tex  classConversionHelperDerived__inherit__graph.md5  classCounter.tex  classCustomFunctionNamingTest.tex  classCustomFunctionNamingTest__inherit__graph.md5  classCustomFunctorNamingTest.tex  classCustomFunctorNamingTest__inherit__graph.md5  classCustomIntegerNamingTest.tex  classCustomIntegerNamingTest__coll__graph.md5  classCustomLambdaNamingTest.tex  classCustomLambdaNamingTest__inherit__graph.md5  classCustomStructNamingTest.tex  classCustomStructNamingTest__coll__graph.md5  classDerivedTest.tex  classDerivedTest__coll__graph.md5  classDetectNotInstantiatedTest.tex  (+805 more)
lab1/task2/: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CTestTestfile.cmake  Doxyfile  InputChecker.cpp  InputChecker.h  Makefile  Menu.cpp  RulesTable.h  TuringMachine  TuringMachine.cpp  TuringMachine.h  cmake_install.cmake  main  main.cpp  main_program  tests  tests.cpp
lab1/task2/docs/: graph_legend.html  index.html
lab1/task2/latex/: refman.tex
lab2/: CMakeLists.txt  README.md
lab2/include/: Airplane.h  Analytics.h  Captain.h  Car.h  Complaint.h  Delivery.h  Driver.h  Employee.h  Exceptions.h  Feedback.h  GPS.h  Hub.h  IClient.h  IOrder.h  Insurance.h  Invoice.h  License.h  Logistics.h  LoyaltyManager.h  MaintenanceScheduler.h  ManagerCoordinator.h  Notification.h  Order.h  Passenger.h  PaymentProcessor.h  RevenueCalculator.h  Route.h  SafetyProtocol.h  Schedule.h  Security.h  Ship.h  TransportCompany.h  Van.h  VehicleStatus.h  Warehouse.h
lab2/src/: Airplane.cpp  Analytics.cpp  Billing.cpp  Bus.cpp  Captain.cpp  Car.cpp  CargoInspector.cpp  Client.cpp  ClientActivityLogger.cpp  Complaint.cpp  Conductor.cpp  Depot.cpp  DispatchCenter.cpp  Employee.cpp  Feedback.cpp  Freight.cpp  GPS.cpp  Hub.cpp  Invoice.cpp  License.cpp  Logistics.cpp  LoyaltyManager.cpp  Menu.cpp  OperationsMonitor.cpp  Order.cpp  Passenger.cpp  PaymentProcessor.cpp  RevenueCalculator.cpp  Route.cpp  RouteOptimizer.cpp  SafetyProtocol.cpp  Security.cpp  TransportCompany.cpp  Vehicle.cpp  VehicleStatus.cpp  Warehouse.cpp
lab3/: Doxyfile  README.md
lab3/include/books/: AudioBook.h  Book.h  (+2 more)
lab4/BubbleSort/: BubbleSort.h  CMakeLists.txt  Makefile  Student.h  tests.cpp
lab4/Graph/: CMakeLists.txt  EdgeIterator.h  Exceptions.h  Graph.h  Makefile
lab4/PatienceSort/: CMakeLists.txt  Makefile  PatienceSort.h  Product.h  tests.cpp
sem1/fractals/: 24.py  25.py
sem1/lab2/: Doxyfile  README.md
sem2/lab1/: .coverage  Main.py  README.md  car_save.json
sem2/lab4/: Main.py  car_save.json  cli_main.py  web_main.py
(+206 files in other folders)
